--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body  {
 	color: rgb(168, 18, 81);
 }
 h2{
-    color: orange;
+    color: rgb(8, 130, 26);
 }
   .texto-ingles{
 	font-style: italic;
